@@ -1,3 +1,7 @@
+Mon Feb 19 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
+	- Hopefully fixing the flaw of MiniWebsvr allowing "special device
+	  files" to be accessed. Still need to test properly.
+
 Fri Feb 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
 	- Applied a patch from Helc`Ainu to provide Linux port with thread
 	  pool support.
